c4prj2_input/grade.txt
Grading at Tue Apr  2 17:28:06 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:27:3: error: ISO C forbids nested functions [-Werror=pedantic]
   void future_cards_from_deck(deck_t * deck, future_cards_t * fc) {
   ^
future.c:41:3: error: expected declaration or statement at end of input
   }
   ^
cc1: all warnings being treated as errors
Compilation of future.c failed

Overall Grade: F
